--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <li><a id="name" href="/pages/necklaces.html"> necklaces & pendants</a></li>
             <li><a id="name" href="/pages/earrings.html"> earrings</a></li>
-            <li><a id="name" href="/pages/brooch.html"> brooch & hairpins</a></li>
+            <li><a id="name" href="/pages/brooches.html"> brooches & hairpins</a></li>
             <li><a id="name" href="/pages/about.html"> contacts</a></li>
 
           </ul>
@@ -42,7 +42,7 @@
 
     <p id="wiki">
         „<em>Steampunk</em> is a retrofuturistic subgenre of science fiction or science fantasy that incorporates
-        technology and aesthetic designs inspired by 19th-century industrial steam-powered machinery.Although its
+        technology and aesthetic designs inspired by 19th-century industrial steam-powered machinery. Although its
         literary origins are sometimes associated with the cyberpunk genre, steampunk works are often set in an
         alternative history of the 19th century British Victorian era or the American "Wild West", in a future during
         which steam power has maintained mainstream usage, or in a fantasy world that similarly employs steam power.
@@ -73,7 +73,7 @@
         mechanical "steampunk" style, and a number of visual and musical artists have been described as steampunk.”
 
     </p>
-    <a target="blank" href="https://en.wikipedia.org/wiki/Steampunk">/Wikipedia 2020/</a>
+    <a target="blank" id="wiki" href="https://en.wikipedia.org/wiki/Steampunk">/Wikipedia 2020/</a>
 
 
 
