--- a/pages/brooches.html
+++ b/pages/brooches.html
@@ -22,13 +22,13 @@
             
             <li><a id="name" href="/pages/necklaces.html">necklaces & pendants</a></li>
             <li><a id="name" href="/pages/earrings.html">earrings</a></li>
-            <li><a id="name" href="/pages/brooch.html">brooch & hairpins</a></li>
+            <li><a id="name" href="/pages/brooches.html">brooches & hairpins</a></li>
             <li><a id="name" href="/pages/about.html">contacts</a></li>
 
           </ul>
         </div>
       </nav>
-    <h1 id="pages">BroocH & HairpinS</h1>
+    <h1 id="pages">BroocheS & HairpinS</h1>
 
     <div class="gallery">
       <a target="_blank" href="/img/hair/hairpins02.jpg">
