--- a/pages/necklaces.html
+++ b/pages/necklaces.html
@@ -22,7 +22,7 @@
             
             <li><a id="name" href="/pages/necklaces.html">necklaces & pendants</a></li>
             <li><a id="name" href="/pages/earrings.html">earrings</a></li>
-            <li><a id="name" href="/pages/brooch.html">brooch & hairpins</a></li>
+            <li><a id="name" href="/pages/brooches.html">brooches & hairpins</a></li>
             <li><a id="name" href="/pages/about.html">contacts</a></li>
 
           </ul>
