--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
 
         </thead>
         <tbody>
-            <tr>
+            <tr id="table">
                 <td> zhi.steampunk.jewellery@gmail.com
                 </td>
                 <td>
