--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -28,7 +28,7 @@
                 <li><a id="name" href="/pages/necklaces.html">necklaces & pendants</a></li>
                 <li><a id="name" href="/pages/earrings.html">earrings</a></li>
                 <li><a id="name" href="/pages/brooches.html">brooches & hairpins</a></li>
-                <li><a id="name" href="/pages/about.html">contacts</a></li>
+                <li><a id="name" href="/pages/contacts.html">contacts</a></li>
 
             </ul>
         </div>
@@ -41,7 +41,7 @@
         </thead>
         <tbody>
             <tr>
-                <td> zhi.steampunk.jewellery@gmail.com
+                <td id="zhi"> zhi.steampunk.jewellery@gmail.com
                 </td>
                 <td>
 
@@ -62,14 +62,16 @@
                     </div>
 
             </tr>
-            <td>
+        </tbody>
+    </table>
+            <div class="sendMail"></div>
 
                 <form action="mailto:zhi.steampunk.jewellery@gmail.com" method="post" enctype="text/plain">
-                    Name:<br>
+                    <p id="daten">Name:</p>
                     <input id="username" type="text" name="name"><br>
-                    E-mail:<br>
+                    <p id="daten">E-mail:</p>
                     <input id="email" type="text" name="mail"><br>
-                    Comment:<br>
+                    <p id="daten">Comment:</p>
 
                     <textarea id="blabla"></textarea>
                     </br>
@@ -83,15 +85,7 @@
                         </script>
                     
                 </form>
-
-            </td>
-
-            </tr>
-
-
-        </tbody>
-
-    </table>
+            </div>
 
 
 
