--- a/pages/necklaces.html
+++ b/pages/necklaces.html
@@ -23,7 +23,7 @@
             <li><a id="name" href="/pages/necklaces.html">necklaces & pendants</a></li>
             <li><a id="name" href="/pages/earrings.html">earrings</a></li>
             <li><a id="name" href="/pages/brooches.html">brooches & hairpins</a></li>
-            <li><a id="name" href="/pages/about.html">contacts</a></li>
+            <li><a id="name" href="/pages/contacts.html">contacts</a></li>
 
           </ul>
         </div>
