--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <div class="img-logo">
-        <img id="logo" src="/img/logo.jpg" alt="logo">
+        <img id="logo" src="/img/kislogo.jpg" alt="logo">
     </div>
 
 
