--- a/pages/brooches.html
+++ b/pages/brooches.html
@@ -37,6 +37,12 @@
       <div class="desc">wheels</div>
     </div>
 
+    <div class="gallery">
+      <a target="_blank" href="/img/hair/brooch01.jpg">
+        <img src="/img/hair/brooch01.jpg" alt="owlbrooch">
+      </a>
+      <div class="desc">owl brooch</div>
+    </div>
   
 </body>
 
