--- a/pages/earrings.html
+++ b/pages/earrings.html
@@ -51,6 +51,12 @@
       <div class="desc">keys</div>
     </div>
 
+    <div class="gallery">
+      <a target="_blank" href="/img/earrings/earrings04.jpg">
+        <img id="product" src="/img/earrings/earrings04.jpg" alt="curtaintassels">
+      </a>
+      <div class="desc">curtain tassels</div>
+    </div>
   
 </body>
 
