--- a/pages/necklaces.html
+++ b/pages/necklaces.html
@@ -45,6 +45,12 @@
       <div class="desc">heart need time</div>
     </div>
   
+    <div class="gallery">
+      <a target="_blank" href="/img/necklaces/necklaces02">
+        <img src="/img/necklaces/necklaces02.jpg" alt="got">
+      </a>
+      <div class="desc">lady of winterfell</div>
+    </div>
 
 
 </body>
